# iroc_fleet_manager

./: CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml
action/: AutonomyTest.action  CoverageMission.action  ExecuteMission.action  FleetManager.action  FleetManagerAction.action  WaypointFleetManager.action  WaypointMissionManagement.action
config/: config.yaml  coverage_config.yaml  coverage_planner_config.yaml  plugin_manager.yaml  plugins.yaml
include/iroc_fleet_manager/: base_fleet_manager.h  common_handlers.h  conversions.h  fleet_manager.hpp  json_var_parser.h  planner.h  types.h
include/iroc_fleet_manager/enums/: fleet_mission_state.h
include/iroc_fleet_manager/iroc_plugins/: autonomy_test_planner.h  coverage_planner.h  cz_altitude_coverage_planner.h  waypoint_planner.h
include/iroc_fleet_manager/utils/: conversions.h  json_var_parser.h  types.h
launch/: iroc_fleet_manager.launch  iroc_fleet_manager.launch.py  iroc_mission_management.launch
lib/CoveragePlannerLib/include/CoveragePlannerLib/: coverage_planner.hpp
lib/CoveragePlannerLib/src/: MapPolygon.cpp  algorithms.cpp  coverage_planner.cpp  main.cpp
lib/CoveragePlannerLib/src/mstsp_solver/: MstspSolver.cpp  TargetSet.cpp
lib/CzAltitude/: CMakeLists.txt  README.md
lib/CzAltitude/data/: dmr5g_index.csv
lib/CzAltitude/include/: nanoflann.hpp
lib/CzAltitude/include/CzAltitude/: DMR5GElevationGrid.hpp
lib/CzAltitude/src/: DMR5GElevationGrid.cpp  main.cpp
lib/EnergyAwareMCPP/include/EnergyAwareMCPP/: MapPolygon.hpp  ShortestPathCalculator.hpp  coverage_planner.hpp  custom_types.hpp  utils.hpp
lib/EnergyAwareMCPP/include/EnergyAwareMCPP/mstsp_solver/: MstspSolver.h
lib/EnergyAwareMCPP/src/: EnergyCalculator.cpp  MapPolygon.cpp  ShortestPathCalculator.cpp  coverage_planner.cpp  utils.cpp
lib/EnergyAwareMCPP/src/mstsp_solver/: MstspSolver.cpp
msg/: AutonomyTestRobot.msg  CoverageMission.msg  CoverageMissionRobot.msg  IROCFleetMissionGoal.msg  MissionGoal.msg  WaypointMissionInfo.msg  WaypointMissionRobot.msg  WaypointMissionRobotResult.msg
src/: .iroc_bridge.cpp.swp  autonomy_test_planner.cpp  coverage_planner.cpp  fleet_manager.cpp  iroc_autonomy_test.cpp  iroc_coverage_planner.cpp  iroc_fleet_manager.cpp  iroc_mission_management.cpp  json_var_parser.cpp  waypoint_planner.cpp
src/planner_plugins/: autonomy_test_planner.cpp  coverage_planner.cpp  cz_altitude_coverage_planner.cpp  waypoint_planner.cpp
src/utils/: json_var_parser.cpp
srv/: ChangeFleetMissionStateSrv.srv  ChangeRobotMissionStateSrv.srv  GetMissionPointsSrv.srv  GetObstaclesSrv.srv  GetSafetyBorderSrv.srv  GetWorldOriginSrv.srv  UploadFleetMissionSrv.srv
