<?xml version="1.0"?>
<package format="2">

  <name>iroc_mission_management</name>
  <version>1.0.0</version>
  <description>Node for handling fleet mission execution</description>

  <maintainer email="rivera@fly4future.com">Marlon Rivera</maintainer>
  <author email="rivera@fly4future.com">Marlon Rivera</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_robot_diagnostics</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_mission_manager</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
